--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,1 +1,6 @@
 @import "~font-awesome/css/font-awesome.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+html, body {
+    height: 100%;
+}
