--- a/app/app.global.css
+++ b/app/app.global.css
@@ -3,4 +3,14 @@
 
 html, body {
     height: 100%;
+    overflow: hidden;
+}
+
+.full-height{
+    height: 100%;
+}
+
+.scrollable {
+    height: 100%;
+    overflow: auto;
 }
